--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
         <h1>Etch-a-Sketch</h1>
         <div id="container"></div>
+
+        <button id="resize">Resize Grid</button>
         
 
         <script src="script.js"></script>
