--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <h1>Etch-a-Sketch</h1>
-        <div id="container"></div>
+        <div class="main">
+           <h1>Etch-a-Sketch</h1>
+           <button id="resize">Resize Grid</button>
+           <div id="container"></div>
 
-        <button id="resize">Resize Grid</button>
-        
-
+        </div>   
         <script src="script.js"></script>
     </body>
 </html>
